Frontend and backend talking now

--- a/FrontEnd/src/app/coordinate-component/coordinate-component.component.html
+++ b/FrontEnd/src/app/coordinate-component/coordinate-component.component.html
@@ -1,10 +1,10 @@
 
   <div class="form-group">
-    <label for="longitude">Longitude</label>
-    <input type="text" class="form-control" id="longitude" aria-describedby="emailHelp" placeholder="Enter Longitude" style="width: 300px;">
+    <label for="longitude">Latitude</label>
+    <input type="text" class="form-control" id="longitude" aria-describedby="emailHelp" placeholder="Enter Latitude" style="width: 300px;">
 
-    <label for="latitude">Latitude</label>
-    <input type="text" class="form-control" id="latitude" placeholder="Enter Latitude" style="width: 300px;">
+    <label for="latitude">Longitude</label>
+    <input type="text" class="form-control" id="latitude" placeholder="Enter Longitude" style="width: 300px;">
   </div>
   <br>
   <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
