--- a/FrontEnd/src/app/coordinate-component/coordinate-component.component.html
+++ b/FrontEnd/src/app/coordinate-component/coordinate-component.component.html
@@ -9,3 +9,12 @@
   <br>
   <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 
+<br>
+<div class="score">
+  <h1>Your Score: </h1>
+  <h6>This score is based on</h6>
+  <br>
+    <p>Temperature: </p>
+    <p>Moisture: </p>
+</div>
+
